# -*- mode: org -*-
#+date: Fri Nov 26 17:10:54 2021
#+author: fubuki
* wtag 1.20
** wtag
*** Change: kakasi の挙動調整 for Windows
    MS版カカシがかなり昔にメンテ停止していて SJIS にしか対応していない為の措置。
    変数 `system-type' が windows-nt(または ms-dos)の場合、
    エラー回避するため sjis に無い文字を含むタグは kakasi.exe に渡さないようにする(無変換のまま戻る).

*** fix: タイトルタグが無いときファイル名がタイトルになる
    これがいつのまにか死んでいたので修正.

*** Add: function `wtag-track-number-adjust'. variable `wtag-track-number-adjust-without-query'. 
    すべてのトラックバンバーを分数番号("トラック/トラック数")化する.
    ライタブルモードの C-c C-t にバインド.

** mf-lib-mp3
   (wtag から呼ばれて)ソートタグが追加されたとき、alias が解決できなかったのを修正.
   `mf-id33-tag-default-add-alias' にセットされた alias が追加されるようにした.
   デフォルトではこの変数が `mf-id33-tag-musiccenter-alias' で MusicCenter タイプになる.
   `mf-id33-tag-lame-alias' にしておくことによって LAME type にできる.

* wtag 1.19
** wtag
*** カスタマイズ変数 `wtag-force-load' のデフォルトを nil に変更
    編集モードになっていなくても D&D でジャケット変更できるようにする変数で、
    デフォが 300 だったため最初に 1度だけ編集していいのかの問い合わせが入り、
    これとは別に画像ロード側にも問い合わせがあるので、
    2重に問い合わせが出るようでとまどうので、素の設定のときそうならなくするのと
    安全性向上のための措置. (よく見ると一応メッセージは違う)
    
    関連する変数 `wtag-load-without-query' (デフォルト nil).
    これが t か keep になっていると、画像ロード時の問い合わせが抑止されるため、
    `wtag-force-load' が non-nil で問い合わせが出ても違和感が出ない.

    : ;; 自分的設定
    : (setq wtag-load-without-query 'keep)
    : (setq wtag-force-load 300)

    問い合わせ処理をひとつにまとめようともしたが、
    プログラム側からすると出す箇所が違うのでひとつにはできなかった.
    
*** Fix インデックス・バッファにもサフィクスを追加
    アルバム名をそのままバッファ名にしていたが、
    アルバム・ディレクトリが dired でも開かれていると、
    バッファ名が衝突してしまうため.(何故か開けていて今まで気づかず)

*** イメージ・バッファのモードラインにピクセル・サイズの表示
    本来右側に表示すべきだが、タイトルが長いと見切れて表示されなくなるので、
    タイトルの手前(左側)に表示されます.
    face `wtag-image-size' で色が変更できます.
    : (set-face-attribute `wtag-image-size nil :foreground "green" :weight 'bold)
      
*** ソートタグの中身を対応タグにバルーンする.
    例えば曲名の上にマウスポインタが重なると、
    対応するソートタグがあれば、そこにバルーン表示される.
    ;; Windows 以外だとどうなるのか知らない.

*** ウインドウの開く幅の調整
    インデックス・ウィンドウが曲数に合わせフィットする.
    変数 `wtag-pop-action' を nil にすると以前と同じ等分割になる.
    但しアートワークが上側になるようにしたので、
    位置関係まで同じにするなら以下のようにする.
